[BeOS]Bug 311651.Better Move, Resize and Scroll handling implemented. r=thesuckiestemail@yahoo.se. BeOS-only, no sr required